--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -271,7 +271,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:text="红光强度"
+        android:text="@string/red_light"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_readlight_minus"
         app:layout_constraintEnd_toStartOf="@+id/img_readlight_minus"
