--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,6 +36,7 @@
             android:layout_marginStart="-10dp"
             app:layout_constraintStart_toEndOf="@+id/progress_energy"
             app:layout_constraintTop_toTopOf="@+id/tv_energy"
+            app:selectionRequired="true"
             app:singleSelection="true">
 
             <Button
