--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,6 +49,15 @@
         android:id="@+id/inputFragment"
         android:name="com.connor.picofull.ui.InputFragment"
         android:label="fragment_backstage"
-        tools:layout="@layout/fragment_input" />
+        tools:layout="@layout/fragment_input" >
+        <action
+            android:id="@+id/action_inputFragment_to_backstageFragment"
+            app:destination="@id/backstageFragment" />
+    </fragment>
     <action android:id="@+id/action_global_inputFragment" app:destination="@id/inputFragment" />
+    <fragment
+        android:id="@+id/backstageFragment"
+        android:name="com.connor.picofull.ui.BackstageFragment"
+        android:label="fragment_backstage"
+        tools:layout="@layout/fragment_backstage" />
 </navigation>
