--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,12 +76,14 @@
             android:orientation="horizontal">
 
             <RadioGroup
+                android:id="@+id/rg_alert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
                 android:orientation="horizontal" >
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:clickable="false"
                     android:id="@+id/radio_high_temp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -89,6 +91,7 @@
                     android:button="@null" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:clickable="false"
                     android:id="@+id/radio_xenon_failure"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -96,6 +99,7 @@
                     android:button="@null" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:clickable="false"
                     android:id="@+id/radio_flow_err"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -103,6 +107,7 @@
                     android:button="@null" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:clickable="false"
                     android:id="@+id/radio_power_err"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
