--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,12 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.connor.picofull.ui.view.SemiCircleArcProgressBar
+        <com.connor.picofull.ui.view.Test
             android:id="@+id/progress_energy"
-            android:layout_width="400dp"
-            android:layout_height="200dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="380dp"
+            android:layout_height="380dp"
+            android:layout_marginStart="12dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_energy"
             app:percent="30"
@@ -59,6 +58,7 @@
             android:id="@+id/tv_energy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="@+id/progress_energy"
             app:layout_constraintStart_toStartOf="@+id/progress_energy"
@@ -69,7 +69,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="86dp"
             android:text="@string/energy_density"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/progress_energy"
@@ -105,13 +105,11 @@
                 android:textColor="@color/black" />
         </LinearLayout>
 
-        <com.connor.picofull.ui.view.SemiCircleArcProgressBar
+        <com.connor.picofull.ui.view.Test
             android:id="@+id/progress_hz"
-            android:layout_width="400dp"
-            android:layout_height="200dp"
-
+            android:layout_width="380dp"
+            android:layout_height="380dp"
             android:layout_marginStart="-10dp"
-            android:layout_marginTop="16dp"
             app:layout_constraintStart_toEndOf="@+id/toggle_group"
             app:layout_constraintTop_toBottomOf="@+id/tv_hz"
             app:percent="30"
@@ -123,6 +121,7 @@
             android:id="@+id/tv_hz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="@+id/progress_hz"
             app:layout_constraintStart_toStartOf="@+id/progress_hz"
@@ -133,7 +132,7 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="86dp"
             android:text="@string/rate"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/progress_hz"
@@ -179,6 +178,19 @@
             app:layout_constraintTop_toBottomOf="@+id/layout_rate"
             tools:text="脉冲数" />
 
+        <ToggleButton
+            android:id="@+id/toggle_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:button="@drawable/toggle_switch"
+            android:checked="false"
+            android:textOff=""
+            android:textOn=""
+            app:layout_constraintEnd_toStartOf="@+id/progress_hz"
+            app:layout_constraintStart_toEndOf="@+id/progress_energy"
+            app:layout_constraintTop_toBottomOf="@+id/rg_energy" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -191,19 +203,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="光斑尺寸" />
-
-    <ToggleButton
-        android:id="@+id/toggle_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:button="@drawable/toggle_switch"
-        android:checked="false"
-        android:textOff=""
-        android:textOn=""
-        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
-        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_off"
