--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -66,6 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5">
@@ -78,6 +79,7 @@
             android:background="@android:color/transparent"
             android:button="@null"
             android:drawableTop="@drawable/baseline_brightness_high_24"
+            android:gravity="center"
             android:text="@string/chinese"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/textView5"
@@ -92,6 +94,7 @@
             android:background="@android:color/transparent"
             android:button="@null"
             android:drawableTop="@drawable/baseline_brightness_high_24"
+            android:gravity="center"
             android:text="@string/english"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_chinese"
@@ -106,6 +109,7 @@
             android:background="@android:color/transparent"
             android:button="@null"
             android:drawableTop="@drawable/baseline_brightness_high_24"
+            android:gravity="center"
             android:text="@string/French"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_english"
@@ -120,6 +124,7 @@
             android:background="@android:color/transparent"
             android:button="@null"
             android:drawableTop="@drawable/baseline_brightness_high_24"
+            android:gravity="center"
             android:text="@string/spanish"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_french"
