--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -74,7 +74,7 @@
     <color name="app_green">#0F9D58</color>
     <color name="app_green_dark">#0B8043</color>
     <color name="app_yellow">#F4B400</color>
-    <color name="app_yellow_dark">#F09300</color>
+    <color name="app_yellow_dark">#A36400</color>
     <color name="app_red">#DB4437</color>
 
     <color name="dapp_red">#30a9de</color>
