--- a/app/src/main/res/drawable/arrow_forward.xml
+++ b/app/src/main/res/drawable/arrow_forward.xml
@@ -3,7 +3,7 @@
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40"
-    android:tint="@color/black">
+    android:tint="@color/white">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M12.833,37.292 L9.792,34.208 24.125,19.917 9.792,5.583 12.833,2.542 30.167,19.917Z"/>
