--- a/app/src/main/res/drawable/toggle_switch.xml
+++ b/app/src/main/res/drawable/toggle_switch.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true" android:drawable="@drawable/ic_not_started"/>
-    <item android:state_checked="false" android:drawable="@drawable/ic_stop_circle" />
+    <item android:state_checked="true" android:drawable="@drawable/ic_start"/>
+    <item android:state_checked="false" android:drawable="@drawable/ic_stop" />
 
 </selector>
