--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -11,6 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:title="Pico Full"
+        app:titleTextColor="@color/white"
         app:titleTextAppearance="@style/ToolbarTitleAppearance"
         app:layout_constraintBottom_toTopOf="@+id/nav"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,34 +36,37 @@
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radio_settings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/radiobutton_main"
-                    android:button="@null" />
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/selector_settings"
+                    android:button="@null"/>
+
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radio_video"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/radiobutton_main"
-                    android:button="@null" />
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginStart="12dp"
+                    android:background="@drawable/selector_video"
+                    android:button="@null"/>
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radio_about"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/radiobutton_main"
-                    android:button="@null" />
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginStart="12dp"
+                    android:background="@drawable/selector_about"
+                    android:button="@null"/>
 
             </RadioGroup>
 
 
             <ImageView
                 android:id="@+id/img_back"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_marginEnd="24dp"
-                android:src="@drawable/undo"
+                android:src="@drawable/selector_back"
                 android:visibility="gone"
                 tools:visibility="visible"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
