--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:text="@string/buzz"
+        android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
@@ -37,17 +38,17 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/radio_buzz_off"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/radiobutton_main"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:background="@drawable/selector_buzz_off"
             android:button="@null" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/radio_buzz_on"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:layout_marginStart="22dp"
-            android:background="@drawable/radiobutton_main"
+            android:background="@drawable/selector_buzz_on"
             android:button="@null" />
     </RadioGroup>
 
@@ -57,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="46dp"
         android:text="@string/language"
+        android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -67,20 +69,19 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5">
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/btn_chinese"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="24dp"
-            android:background="@android:color/transparent"
             android:button="@null"
-            android:drawableTop="@drawable/baseline_brightness_high_24"
+            android:background="@drawable/selector_cn"
             android:gravity="center"
-            android:text="@string/chinese"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/textView5"
             app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -88,14 +89,12 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/btn_english"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="24dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/selector_en"
             android:button="@null"
-            android:drawableTop="@drawable/baseline_brightness_high_24"
             android:gravity="center"
-            android:text="@string/english"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_chinese"
             app:layout_constraintStart_toEndOf="@+id/btn_chinese"
@@ -103,14 +102,12 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/btn_french"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="24dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/selector_fr"
             android:button="@null"
-            android:drawableTop="@drawable/baseline_brightness_high_24"
             android:gravity="center"
-            android:text="@string/French"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_english"
             app:layout_constraintStart_toEndOf="@+id/btn_english"
@@ -118,14 +115,12 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/btn_spanish"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
             android:layout_marginStart="24dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/selector_es"
             android:button="@null"
-            android:drawableTop="@drawable/baseline_brightness_high_24"
             android:gravity="center"
-            android:text="@string/spanish"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_french"
             app:layout_constraintStart_toEndOf="@+id/btn_french"
@@ -141,6 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:text="@string/volume"
+        android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
@@ -162,6 +158,9 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:max="10"
+        android:thumb="@drawable/bump"
+        android:progressTint="@color/orange_primary_dark"
+        android:progressBackgroundTint="@color/gray_light"
         app:layout_constraintBottom_toBottomOf="@+id/img_volume_minus"
         app:layout_constraintEnd_toStartOf="@id/img_volume_plus"
         app:layout_constraintStart_toEndOf="@id/img_volume_minus"
