--- a/app/src/main/res/layout/item_video_info.xml
+++ b/app/src/main/res/layout/item_video_info.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
+
         <androidx.cardview.widget.CardView
             android:id="@+id/card_video"
             android:layout_width="0dp"
@@ -32,6 +34,13 @@
                 android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
                 tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:src="@drawable/img_paly" />
+
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -42,6 +51,7 @@
             android:layout_marginTop="16dp"
             android:text="@{m.videoName}"
             android:textSize="22sp"
+            android:textColor="@color/app_yellow_dark"
             app:layout_constraintStart_toStartOf="@+id/card_video"
             app:layout_constraintTop_toBottomOf="@+id/card_video"
             tools:text="Video name" />
@@ -54,6 +64,7 @@
             android:layout_marginEnd="16dp"
             android:text="@{m.videoLength}"
             android:textSize="22sp"
+            android:textColor="@color/app_yellow_dark"
             app:layout_constraintEnd_toEndOf="@+id/card_video"
             app:layout_constraintTop_toBottomOf="@+id/card_video"
             tools:text="16:21" />
@@ -71,6 +82,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.90" />
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
