--- a/app/src/main/res/layout/layout_video_control.xml
+++ b/app/src/main/res/layout/layout_video_control.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="24dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,10 +32,10 @@
 
         <ImageView
             android:id="@+id/exo_prev"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="24dp"
-            app:srcCompat="@drawable/skip_previous" />
+            app:srcCompat="@drawable/img_skip_previous" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -42,26 +43,26 @@
 
             <ImageView
                 android:id="@+id/exo_play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="12dp"
-                app:srcCompat="@drawable/play_arrow" />
+                app:srcCompat="@drawable/img_play_arrow" />
 
             <ImageView
                 android:id="@+id/exo_pause"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="12dp"
-                app:srcCompat="@drawable/pause" />
+                app:srcCompat="@drawable/img_pause" />
         </RelativeLayout>
 
 
         <ImageView
             android:id="@+id/exo_ffwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="12dp"
-            app:srcCompat="@drawable/skip_next" />
+            app:srcCompat="@drawable/img_skip_next" />
     </LinearLayout>
 
     <LinearLayout
@@ -81,7 +82,7 @@
             android:layout_marginBottom="12dp"
             android:contentDescription="@null"
             android:text="1"
-            android:textColor="@color/deep_orange_primary"
+            android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -94,7 +95,7 @@
             android:layout_marginBottom="12dp"
             android:contentDescription="@null"
             android:text=" / "
-            android:textColor="@color/deep_orange_primary"
+            android:textColor="@color/white"
             android:textSize="16sp"
             tools:text="/" />
 
@@ -113,18 +114,23 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         app:layout_constraintStart_toEndOf="@+id/linearLayout"
         app:layout_constraintTop_toTopOf="@+id/linearLayout"
-        app:srcCompat="@drawable/volume_up" />
+        app:srcCompat="@drawable/img_volume_up" />
 
     <SeekBar
         android:id="@+id/seek_bar_volume"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:thumb="@null"
+        android:progressTint="@color/orange_primary_dark"
+        android:maxHeight="14dp"
+        android:minHeight="14dp"
+        android:progressBackgroundTint="@color/gray_light"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
